<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hustoo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_wenzhang">Wenzhang</string>
    <string name="title_activity_login">Login</string>
    <string name="mima">密码</string>
    <string name="youxiang">邮箱（用来修改/找回密码）</string>
    <string name="name">昵称</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="yue">月</string>
    <string name="month">九</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">个人中心</string>
    <string name="title_activity_tongzhi">TongzhiActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_commet">CommetActivity</string>
    <string name="input">请输入帐号邮箱</string>
    <string name="find_mima">找回/修改密码</string>
    <string name="welcome">欢迎</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="Icome">推荐</string>
    <string name="xiaoYu">晓雨的故事 / RainDroid</string>
    <string name="dayWen">每日一文</string>
    <string name="dayMusic">每日一乐</string>
    <string name="initMusic">我敢在你怀里孤独</string>
    <string name="shareLocationPrompt">如有精彩内容，可投稿到 ---1073216732@qq.com </string>
    <string name="imfor">个人信息</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">"Hustoo  Version 1.3 \n\n诞生于 ： 华中科技大学 \n\n反馈：http://weibo.com/hnjmscb/ \n\n开源地址：https://github.com/cxmscb/Android-Hustoo "</string>
    <string name="share">分享</string>
    <string name="web">浏览器打开</string>

    <string name="title_activity_book">图书搜索</string>

    <string name="books">本  月  推  荐  书  单</string>
    <string name="title_activity_phtoto">PhtotoActivity</string>

</resources>
