<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout
    android:background="#18b4ed"
    android:layout_width="match_parent"
    android:layout_height="53dp">


 <ImageView
     android:id="@+id/left"
     android:padding="17dp"
     android:onClick="back"
     android:background="@drawable/drawer_selector"
     android:src="@drawable/umeng_fb_back_normal"
     android:layout_width="50dp"
     android:layout_height="54dp" />


        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
       android:layout_toRightOf="@id/left"
            android:gravity="center_vertical"



            android:scaleX="1.0"
            android:text="@string/welcome"

            android:textColor="#ffffff"
            android:textSize="19sp"
            />
</RelativeLayout>

    <RelativeLayout

        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleX="1.0"
        >

        <TextView
            android:id="@+id/denglu"
            android:text="@string/login"
            android:textSize="14sp"
           android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




        <com.rengwuxian.materialedittext.MaterialEditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"

            android:id="@+id/yonghuming"
            android:inputType="textEmailAddress"
            app:met_primaryColor="#18b4ed"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/name"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/name"
            android:layout_below="@+id/denglu"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            xmlns:android="http://schemas.android.com/apk/res/android"

            app:met_primaryColor="#18b4ed"
            app:met_floatingLabel="highlight"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            app:met_floatingLabelText="@string/mima"
            android:id="@+id/password"
            app:met_maxCharacters="12"

            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/mima"
            android:layout_below="@+id/yonghuming"
            />

        <TextView
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password"
            android:text="@string/find_mima"
            android:paddingTop="4dp"
            android:textSize="13sp"
           android:id="@+id/forget"
            android:textColor="#000000"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:weightSum="4"
            android:layout_marginTop="78dp"
            android:layout_below="@+id/password"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:layout_weight="1"
                android:text="@string/register"
                android:onClick="register"
                android:textSize="14sp"
                android:textColor="#18b4ed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shapebre"
                />
            <Button
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text="@string/login"
                android:onClick="onLogin"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>

