<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="12dp"
    android:paddingBottom="14dp"
    android:background="#ffffff"
    android:layout_height="wrap_content"
    >

    <TextView
        android:textScaleX="1.0"
        android:layout_marginRight="14dp"
        android:layout_alignParentRight="true"
        android:id="@+id/weather1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="#8d8d8d"
        />

    <TextView
        android:id="@+id/wenzhang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dayWen"
        android:textScaleX="1.0"
        android:textSize="15sp"
        android:layout_marginBottom="4dp"
        android:textColor="#8d8d8d"
        />

    <Button
        android:layout_below="@+id/wenzhang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiaoYu"
        android:id="@+id/gushi"
        android:background="#ffffffff"
        android:textSize="17sp"
        android:textScaleX="1.0"
        android:textColor="#8d8d8d"
/>
    <Button
        android:layout_below="@+id/gushi"
        android:id="@+id/wolai2"
        android:background="#ffffffff"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:textSize="13sp"
        android:textColor="#FF8d29"
        android:textScaleX="1.0"
        android:text="@string/Icome"
        />
</RelativeLayout>
