

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
 >





    <RelativeLayout
        android:background="#18b4ed"
        android:layout_width="match_parent"
        android:layout_height="53dp">


        <ImageView
            android:onClick="back"
            android:id="@+id/left"
            android:padding="17dp"
            android:background="@drawable/drawer_selector"
            android:src="@drawable/umeng_fb_back_normal"
            android:layout_width="50dp"
            android:layout_height="54dp" />
    <TextView
        android:id="@+id/welcome"



        android:text="@string/welcome"

        android:layout_width="wrap_content"
        android:layout_height="54dp"

        android:gravity="center_vertical"

        android:scaleX="1.0"

        android:textColor="#ffffff"
        android:layout_toRightOf="@id/left"
        android:textSize="19sp"
        />

</RelativeLayout>
    <ScrollView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:background="#00000000"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:scrollbarStyle="outsideOverlay"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            >
    <TextView
        android:id="@+id/denglu"
        android:text="@string/register"
        android:textSize="14sp"
        android:padding="9dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.rengwuxian.materialedittext.MaterialEditText
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:id="@+id/re_name"
        app:met_maxCharacters="8"
    app:met_primaryColor="#18b4ed"
    app:met_floatingLabel="highlight"
    app:met_floatingLabelText="@string/name"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:hint="@string/name"
    android:layout_margin="9dp"
    />

    <com.rengwuxian.materialedittext.MaterialEditText
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/re_email"
        app:met_primaryColor="#18b4ed"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/youxiang"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/youxiang"
        android:layout_margin="9dp"
        />


    <com.rengwuxian.materialedittext.MaterialEditText
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/re_mima"
        app:met_primaryColor="#18b4ed"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/mima"
        app:met_maxCharacters="12"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/mima"
        android:layout_margin="9dp"
        />

    <Button

        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:onClick="onRegister"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        />
        </LinearLayout>
</ScrollView>
</LinearLayout>
